# cli

./: BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod
.github/workflows/: ci.yaml
src/: BUILD.bazel  cli.go
src/cmd/: BUILD.bazel
