load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

gazelle(name = "gazelle")

go_library(
    name = "cli_lib",
    srcs = ["cli.go"],
    importpath = "github.com/albertocavalcante/cli",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd",
    ],
)

go_binary(
    name = "cli",
    embed = [":cli_lib"],
    visibility = ["//visibility:public"],
)
