load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "src_lib",
    srcs = ["cli.go"],
    importpath = "github.com/albertocavalcante/cli/src",
    visibility = ["//visibility:private"],
    deps = ["//src/cmd"],
)

go_binary(
    name = "cli",
    embed = [":src_lib"],
    visibility = ["//visibility:public"],
)
